--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,1 +1,6 @@
-<h1>new </h1>
+<h1>new request</h1>
+
+<%= form_with model: @request do |f|%>
+   <%= f.collection_select :manager_id, Manager.all, :id, :first_name %>
+    <%= f.collection_select :reason_id, Reason.all, :id, :reason %>
+<% end %>
