--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,6 +1,9 @@
 <h1>new request</h1>
 
 <%= form_with model: @request do |f|%>
-   <%= f.collection_select :manager_id, Manager.all, :id, :first_name %>
-    <%= f.collection_select :reason_id, Reason.all, :id, :reason %>
+  Manager: <%= f.collection_select :manager_id, Manager.all, :id, :first_name %><br>
+    Reason: <%= f.collection_select :reason_id, Reason.all, :id, :reason %><br>
+
+    <%=f.label "Details:" %><br>
+    <%= f.text_area :explanation %>
 <% end %>
