--- a/app/views/managers/show.html.erb
+++ b/app/views/managers/show.html.erb
@@ -11,20 +11,29 @@
 
 <ul>
 <% @manager.requests.each do |req| %>
-<p>Reason: <%= req.reason.reason %></p>
-<p>Explanation: <%= req.explanation %></p>
 
-<%= form_with model:req do |f| %>
-<p><%= f.label "Summary" %></p>
-<p><%= f.text_area :man_explanation %></p>
+    <p>Reason: <%= req.reason.reason %></p>
+    <p>Explanation: <%= req.explanation %></p>
+    <p>summary: <%= req.man_explanation %></p>
+    <p>approval: <%= req.approve_or_deny %></p>
 
-<p><%= f.label :approve_or_deny %></p>
-<p><%= f.text_field :approve_or_deny %></p>
+     <%if req.approve_or_deny == "" %>
+            <%= form_with model:req do |f| %>
+                <p><%= f.label "Summary" %></p>
+                <p><%= f.text_area :man_explanation %></p>
 
-<%= f.submit %>
 
+                <%= f.select :approve_or_deny, ["Approved", "Denied"] %><br>
+               
+
+                <%= f.submit %>
+                <hr>
+            <% end %>
+        <% end %>
+        <hr>
     <% end %>
-<% end %>
 </ul>
 
 <%= button_to "Logout", logout_path %>
+
+
