--- a/app/views/managers/show.html.erb
+++ b/app/views/managers/show.html.erb
@@ -38,6 +38,7 @@
 
 <%= button_to "Create New Employee", new_employee_path, :method => :get %><br>
 
+<%= button_to "Create New Reason", new_reason_path, :method => :get %><br>
 
 <%= button_to "Logout", logout_path %>
 
