--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,9 +1,18 @@
 <h1>Employee Setup</h1>
 
 <% if flash[:errors] %>
-  <% flash[:errors].each do |key| %>
-    <h4 style="color: red;"> Error(s): <%= key %> </h4>
-  <% end %>
+<div id="error_explanation">
+    <h2 style="color: red;">
+    <%= pluralize(flash[:errors].count, "error") %>
+    prohibited this Employee from being created:
+    </h2>
+
+    <ul>
+    <% flash[:errors].each do |msg| %>
+    <li style="color: red;"><%= msg %></li>
+    <% end %>
+    </ul>
+</div>
 <% end %>
 
 <div><%= form_with model:@employee do |f| %>
