added css files

--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,44 +1,61 @@
+<!DOCTYPE html>
+<html>
+  <head>
+
 <h1>Employee Setup</h1>
+</head>
+<body>
+    <div class="errors">
+        <% if flash[:errors] %>
+        <div id="error_explanation">
+            <h2 style="color: red;">
+            <%= pluralize(flash[:errors].count, "error") %>
+            prohibited this Employee from being created:
+            </h2>
 
-<% if flash[:errors] %>
-<div id="error_explanation">
-    <h2 style="color: red;">
-    <%= pluralize(flash[:errors].count, "error") %>
-    prohibited this Employee from being created:
-    </h2>
-
-    <ul>
-    <% flash[:errors].each do |msg| %>
-    <li style="color: red;"><%= msg %></li>
-    <% end %>
-    </ul>
-</div>
-<% end %>
-
-<div class="container text-center">
-    <div><%= form_with model:@employee do |f| %>
-
-        <%= f.label :first_name %><br>
-        <%= f.text_field :first_name %><br>
-
-        <%= f.label :last_name %><br>
-        <%= f.text_field :last_name %><br>
-
-        <%= f.label :years_working %><br>
-        <%= f.text_field :years_working %><br>
-
-        <%= f.label :email %><br>
-        <%= f.text_field :email %><br>
-
-        <%= f.label :username %><br>
-        <%= f.text_field :username %><br>
-
-        <%= f.label :password %><br>
-        <%= f.text_field :password %><br>
-    <br>
-        <%= f.submit %></div>
-
-    <% end %>
-<div>
+            
+            <% flash[:errors].each do |msg| %>
+                <ul style="color: red;"><%= msg %>
+            </ul>
+            <% end %>
+            
+        </div>
+        <% end %>
+    </div>
 
 
+
+    <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Create Employee</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Fill in form below</h6>
+
+        <%= form_with model:@employee do |f| %>
+
+            <%= f.label :first_name %><br>
+            <%= f.text_field :first_name %><br>
+
+            <%= f.label :last_name %><br>
+            <%= f.text_field :last_name %><br>
+
+            <%= f.label :years_working %><br>
+            <%= f.text_field :years_working %><br>
+
+            <%= f.label :email %><br>
+            <%= f.text_field :email %><br>
+
+            <%= f.label :username %><br>
+            <%= f.text_field :username %><br>
+
+            <%= f.label :password %><br>
+            <%= f.text_field :password %><br>
+        <br>
+            <%= f.submit %>
+
+        <% end %>
+    </div>
+    </div>
+
+</body>
+
+</html>
