--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,51 @@
  
  */
  @import "bootstrap";
+
+h1 {
+    text-align: center;
+    font-weight: 900;
+    color: rgb(238, 12, 12);
+    -webkit-text-stroke: 1.5px black;
+}
+
+.container {
+    width:750px;
+    background-color: black;
+    border-radius: 10px ;
+    background: rgba(0, 0, 0, 0.75); 
+    
+  }
+
+.jumbotron{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    color: white;
+    text-align: center;
+} 
+
+.vertical-center {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+  
+    display: flex;
+    align-items: center;
+  }
+
+.card {
+    margin: auto;
+    text-align: center;
+}
+
+.errors {
+    text-align: center;
+}
+
+#error_explanation {
+    text-align: center;
+    background-color: pink;
+}
+
+body {
+    background-color: rgb(67, 82, 139);
+}
