--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -1,30 +1,36 @@
+<!DOCTYPE html>
+<html>
+  <head>
+
 <h1>This is Login page</h1>
+</head>
 
-<% if flash[:error] %>
-    <h4 style="color: red;">
-      Alert: <%= flash[:error] %>
-    </h4>
-<% end %>
+  <body>
+  <div class="errors">
+    <% if flash[:error] %>
+        <h4 style="color: red;">
+          Alert: <%= flash[:error] %>
+        </h4>
+    <% end %>
+  </div>
+    <% if flash[:success] %>
+        <h4 style="color: green;">
+          <%= flash[:success] %> Please Login!
+        </h4>
+    <% end %>
 
-<% if flash[:success] %>
-    <h4 style="color: green;">
-      <%= flash[:success] %> Please Login!
-    </h4>
-<% end %>
+    <%= form_with url: '/login', method: :post do |f| %>
 
-<%= form_with url: '/login', method: :post do |f| %>
+        <%= f.label :username %>
+        <%= f.text_field :"login[username]" %>
 
-  <%= f.label :username %>
-  <%= f.text_field :"login[username]" %>
+        <%= f.label :password %>
+        <%= f.text_field :"login[password]" %>
 
-  <%= f.label :password %>
-  <%= f.text_field :"login[password]" %>
+        <%= f.label :passcode %>
+        <%= f.text_field :"login[passcode]" %>
 
-  <%= f.label :passcode %>
-  <%= f.text_field :"login[passcode]" %>
-
-  <%= f.submit "Login" %>
-
-  
-
-<% end %>
+        <%= f.submit "Login" %>
+      <% end %>
+    </body>
+  </html>
