--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,8 +1,22 @@
-<h1>MPloy!</h1>
+ <!DOCTYPE html>
+<html>
+  <head>
 
-<p>Welcome to MPloy! An application set out to help you, as an employee, have your requests met and fulfilled by your manager in an easy to track manner. Please remember to sign up if you are a new employee or manager at the bottom, or proceed to the login page below!</p>
+  <style>
+  body {
+     background-image: url("assets/architecture.jpg");
+  }
+</style>
+  </head>
 
-<%= button_to "Employee Signup", new_employee_path, :method => :get %><br>
-
-
-<%= button_to "Login", login_path, :method => :get %>
+  <body>
+    <%= yield %>
+    <div class="jumbotron vertical-center">
+ 
+        <div class="container push-spaces">
+            <h1 class="display-4">Fluid jumbotron</h1>
+            <p class="lead">Welcome to MPloy! An application set out to help you, as an employee, have your requests met and fulfilled by your manager in an easy to track manner. Please remember to sign up if you are a new employee or manager at the bottom, or proceed to the login page below!</p>
+        </div>
+    </div>
+  </body>
+</html>
