--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+  <a class="navbar-brand" href="/home"><img src="/assets/MPloy.png" alt="MPloy" style="max-width:15%;"></a>
+
+<% if session[:user]%>
+      <a class="btn btn-outline-primary" href="/logout" role="button">
+      Logout
+      </a>
+    <% else %>
+      <a class="btn btn-outline-primary" href="/login" role="button">
+      Login
+      </a>
+    
+      <div style="padding-left: 10px;">
+        <a class="btn btn-outline-success" href="/employees/new" role="button">
+        Employee Sign Up
+        </a>
+      </div>
+    <% end %>
+  
+</nav>
+
     <title>Project</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
