--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,11 @@
  */
  @import "bootstrap";
 
+@font-face {
+    font-family: "Harlow";
+    src: url('/assets/HARLOWSI');
+}
+
 h1 {
     text-align: center;
     font-weight: 900;
@@ -58,6 +63,12 @@ h1 {
     background-color: pink;
 }
 
-body {
-    background-color: rgb(67, 82, 139);
+.btn {
+    margin: auto;
+    text-align: center;
 }
+
+
+h3 {
+    font-family: "Harlow";
+} 
