--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
+    <head>
+        <h1><img src="<%= asset_path('employee_setup.png') %>"/ style="max-width:35%;" ></h1>
+    </head>
 
-<h1>Employee Setup</h1>
-</head>
-<body>
+
+ <body>
     <div class="errors">
         <% if flash[:errors] %>
         <div id="error_explanation">
