--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,12 @@
 <html>
   <head>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
   
   <a class="navbar-brand" href="/home"><img src="/assets/MPloy.png" alt="MPloy" style="max-width:15%;"></a>
 
 <% if session[:user]%>
-      <a class="btn btn-outline-primary" href="/logout" role="button">
+      <a class="btn btn-outline-danger" href="/logout" role="button">
       Logout
       </a>
     <% else %>
@@ -16,7 +16,7 @@
       </a>
     
       <div style="padding-left: 10px;">
-        <a class="btn btn-outline-success" href="/employees/new" role="button">
+        <a class="btn btn-outline-primary" href="/employees/new" role="button">
         Employee Sign Up
         </a>
       </div>
