--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -14,8 +14,8 @@
     <div class="jumbotron vertical-center">
  
         <div class="container push-spaces">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">Welcome to MPloy! An application set out to help you, as an employee, have your requests met and fulfilled by your manager in an easy to track manner. Please remember to sign up if you are a new employee or manager at the bottom, or proceed to the login page below!</p>
+            <h1 class="display-4"><span class="special-word">C</span>onnecting<br> Employees <span class="special-word">t</span>o <span class="special-word">Managers</span></h1>
+            <p class="lead">Welcome to MPloy! An application set out to help you, as an employee, have your requests met and fulfilled by your manager in an easy to track manner. Please remember to set up your employee profile if you are new, located at the top right, or proceed to the login page!</p>
         </div>
     </div>
   </body>
