--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,11 +19,19 @@
     src: url('/assets/HARLOWSI');
 }
 
+h2 {
+    font-family: Harlow;
+    font-size: 300%;
+    color: white;
+    -webkit-text-stroke: 2px black;
+}
+
 h1 {
+    font-family: Harlow;
     text-align: center;
-    font-weight: 900;
-    color: rgb(238, 12, 12);
-    -webkit-text-stroke: 1.5px black;
+    font-size: 500%;
+    color: rgb(67, 82, 139);
+    -webkit-text-stroke: 2px black;
 }
 
 .container {
@@ -72,3 +80,31 @@ h1 {
 h3 {
     font-family: "Harlow";
 } 
+
+.special-word { 
+    color: rgb(238, 12, 12); 
+  } 
+
+  #manager {
+    color: rgb(238, 12, 12); 
+  }
+
+  .buttonalign {
+    line-height: normal;
+    display: inline-block;
+  }
+
+  div.ex1 {
+    padding-left: 100px;
+  }
+
+  div.text-right {
+      padding-right: 100px;
+      color: white;
+  }
+
+  div.sort {
+      font-family: "Harlow";
+      font-size: 200%;
+      -webkit-text-stroke: 1px black;
+  }
