--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<h3><%= @employee.first_name.titleize %>'s Profile </h3> <br>
+<div class="text-center">
+<h1><%= @employee.employee_name.titleize %>'s Profile </h1> <br>
+</div>
+  <style>
+  body {
+     background-image: url("/assets/Astrodome_Construction.jpg");
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: cover;
+     background-position: center center;
+  } 
+</style>
 <hr>
 </head>
 <body>
-<div><h2><em><%= @employee.employee_name %></em></h2><br>
-<p><strong>Username:</strong> <%= @employee.username %></p><br>
-<p><strong>Email:</strong> <%= @employee.email %></p><br>
-<p><strong>Years Working:</strong> <%= @employee.years_working %></p><br>
-<p><strong>Days Taken Off:</strong> <%= @employee.num_of_days_taken_off %></p><br></div>
 
+<div class="ex1">
+<h4><strong>Username:</strong> <%= @employee.username %></h4><br>
+<h4><strong>Email:</strong> <%= @employee.email %></h4><br>
+<h4><strong>Years Working:</strong> <%= @employee.years_working %></h4><br>
+<h4><strong>Days Taken Off:</strong> <%= @employee.num_of_days_taken_off %></h4><br></div>
+</div>
 
-
+<div class="text-center">
 <% if @employee.requests %>
     <% @employee.requests.each_with_index do |request, index| %>
         <div class="d-flex justify-content-center">
