--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,22 @@
   <a class="navbar-brand" href="/home"><img src="/assets/MPloy.png" alt="MPloy" style="max-width:15%;"></a>
 
 <% if session[:user]%>
-      <a class="btn btn-outline-danger" href="/logout" role="button">
+<div class='login_out'>
+      <a class="btn btn-danger" href="/logout" role="button">
       Logout
       </a>
     <% else %>
-      <a class="btn btn-outline-primary" href="/login" role="button">
+      <a class="btn btn-primary" href="/login" role="button">
       Login
       </a>
-    
-      <div style="padding-left: 10px;">
-        <a class="btn btn-outline-primary" href="/employees/new" role="button">
+    </div>
+    <div class="sign_up">
+        <a class="btn btn-primary" href="/employees/new" role="button">
         Employee Sign Up
         </a>
-      </div>
+        </div>
     <% end %>
+
   
 </nav>
 
