--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div class="sign_up">
         <a class="btn btn-primary" href="/employees/new" role="button">
-        Employee Sign Up
+        Employee Sign Up!
         </a>
         </div>
     <% end %>
