changed redirects for manager show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
       Logout
       </a>
     <% else %>
-      <a class="btn btn-outline-primary" href="/login" role="button">
+      <a class="btn btn-primary" href="/login" role="button">
       Login
       </a>
 
-    </div>
+    
     <div class="sign_up">
         <a class="btn btn-primary" href="/employees/new" role="button">
         Employee Sign Up!
