--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -26,7 +26,7 @@
 
 <div class="text-center">
 <% if @employee.requests %>
-    <% @employee.requests.each_with_index do |request, index| %>
+    <% @employee.requests.sort_by{|request| request.updated_at}.reverse.each_with_index do |request, index| %>
         <div class="d-flex justify-content-center">
         <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
          <div class="card-body">
