--- a/app/views/auth/login.html.erb
+++ b/app/views/auth/login.html.erb
@@ -19,12 +19,13 @@
         </h4>
     <% end %>
   </div>
+  <div class="success">
     <% if flash[:success] %>
-        <h4 style="color: green;">
+        <h4>
           <%= flash[:success] %> Please Login!
         </h4>
     <% end %>
-
+</div>
     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
         <div class="card-body">
         <h5 class="card-title">Please login</h5>
